--- a/src/components/women/Women.module.css
+++ b/src/components/women/Women.module.css
@@ -1,12 +1,12 @@
 .Women {
   width: 100vw;
-  height: 300px;
+  max-width: 500px;
   display: flex;
   justify-content: center;
   align-items: center;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: cover;
 }
 
 .Women div {
