--- a/src/components/container/Container.module.css
+++ b/src/components/container/Container.module.css
@@ -1,11 +1,13 @@
 .contentContainer {
   width: 200vw;
-  height: 600px;
+  max-width: 1000px;
+  height: var(--contentContainer-Height);
   display: flex;
   flex-direction: row;
 }
 
 .genderSelector {
+  max-width: 1000px;
   width: 100vw;
   height: 100%;
   color: white;
