--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -11,7 +11,7 @@
   margin-top: 2%;
 }
 
-.offer {    
+.offer {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -21,31 +21,32 @@
 .offer a {
   width: 80%;
   text-decoration: none;
-  background: rgba( 255, 255, 255, 0.25 );
-  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-  backdrop-filter: blur( 2.5px );
-  -webkit-backdrop-filter: blur( 2.5px );
-  border: 1px solid rgba( 255, 255, 255, 0.18 );
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(2.5px);
+  -webkit-backdrop-filter: blur(2.5px);
+  border: 1px solid rgba(255, 255, 255, 0.18);
   margin-top: 2%;
   padding: 5px;
 }
 
 .offer button {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 20px;
-    background: none;
-    border: none;
-    color: white;
-    letter-spacing: 2px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  background: none;
+  border: none;
+  color: white;
+  letter-spacing: 2px;
+  cursor: pointer;
 }
 
 .offer img {
-    width: 30px;
-    height: 30px;
-    margin-right: 20px;
+  width: 30px;
+  height: 30px;
+  margin-right: 20px;
 }
 
 .offer h2 {
@@ -55,34 +56,31 @@
 }
 
 .socials {
-    width: 50%;
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: row;
-    align-items: center;
+  width: 50%;
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: row;
+  align-items: center;
 }
 
 .socials img {
-    width: 40px;
-    height: 40px;
+  width: 40px;
+  height: 40px;
 }
 
-.Footer p span {
-    font-size: 10px;
-    letter-spacing: 2px;
-    color: rgb(136, 136, 136);
-  }
-  
-  .Footer p {
-    margin-top: 10px;
-    font-size: 15px;
-    color: white;
-    letter-spacing: 3px;
-  }
-  
-  .Footer p a {
-    text-decoration: none;
-    color: white;
-    letter-spacing: 3px;
-  }
-  
+.Footer p {
+  width: 100%;
+  text-align: center;
+  font-size: 12px;
+  color: rgb(179, 179, 179);
+  letter-spacing: 2px;
+  font-family: "Poiret One", cursive;
+}
+
+.Footer p span a {
+  text-decoration: none;
+  font-size: 20px;
+  color: white;
+  letter-spacing: 3px;
+  font-family: "Italianno", sans-serif;
+}
